<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    tools:context="com.advisor.health.mental.mentalhealthadvisor.MainActivity">

    <TextView
        android:id="@+id/mentalProblemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/textViewText"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/mentalProblemTitle"
        android:layout_below="@+id/mentalProblemTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/buttonText"
        android:textSize="20sp" />

    <Button
        android:id="@+id/panicAtckBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/panicAttack"
        android:textSize="20sp" />

    <Button
        android:id="@+id/depressionButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/panicAtckBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/depressionButton"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/depressionButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/schizoBtn"
        android:textSize="20sp" />
</RelativeLayout>
