<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.advisor.health.mental.mentalhealthadvisor.Main3Activity">

    <TextView
        android:id="@+id/testView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/testView"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="78dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/testView"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/qstnOneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="52dp"
                android:text="@string/qstnOneText"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="92dp"
                android:layout_marginStart="92dp"
                android:layout_marginTop="82dp"
                android:layout_weight="2.31"
                android:text="@string/qstnOneYes"
                android:textColor="#000000"
                android:textSize="20sp" />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
