<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.advisor.health.mental.mentalhealthadvisor.BipolarActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bipolarScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="49dp"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp">
        <RelativeLayout
            android:id="@+id/bipolarScrollRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!--<Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_marginTop="21dp"
                android:layout_toEndOf="@+id/bipolarTitle"
                android:layout_toRightOf="@+id/bipolarTitle"
                android:text="@string/hideBipolar"
                android:textSize="20sp"
                android:visibility="invisible" />-->

            <!--<Button
                android:id="@+id/selfChecker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="126dp"
                android:text="@string/checkerButton"
                android:textSize="20sp"
                android:visibility="visible" />-->

            <!--<Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bipolarTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="70dp"
                android:text="@string/button3"
                android:textSize="20sp" />-->

            <TextView
                android:id="@+id/bipolarInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bipolarTitle"
                android:layout_marginTop="15dp"
                android:text="@string/practiceTextView"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/bipolarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:text="@string/textViewText2"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="78dp" />

            <Button
                android:id="@+id/copeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/bipolarInformation"
                android:layout_marginTop="460dp"
                android:text="@string/copingButton"
                android:textSize="20sp"
                android:visibility="visible" />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
